--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -62,13 +62,13 @@ jobs:
         name: Build and install on KinD
         run: devbox run -- make dev.run-on-kind
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ "{{" }} secrets.GITHUB_TOKEN {{ "}}" }}
 
       - if: steps.check_e2e_tests_exist.outputs.files_exists == 'true'
         name: Run e2e tests
         run: devbox run -- make e2e-test
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ "{{" }} secrets.GITHUB_TOKEN {{ "}}" }}
 
       - if: steps.check_e2e_tests_exist.outputs.files_exists == 'true' && always()
         name: Cleanup KinD cluster
@@ -96,8 +96,8 @@ jobs:
         with:
           fail_on_error: true
           reporter: github-pr-review
-          golangci_lint_version: v${{ steps.versions.outputs.golangci-lint }}
-          go_version: v${{ steps.versions.outputs.golang }}
+          golangci_lint_version: v${{ "{{" }} steps.versions.outputs.golangci-lint {{ "}}" }}
+          go_version: v${{ "{{" }} steps.versions.outputs.golang {{ "}}" }}
 
   lint-gha:
     runs-on: ubuntu-22.04
@@ -129,7 +129,7 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
+          ref: ${{ "{{" }} github.event.pull_request.head.sha {{ "}}" }}
 
       - name: Install devbox
         uses: jetpack-io/devbox-install-action@v0.5.0
@@ -140,7 +140,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.cache/pre-commit
-          key: pre-commit-3|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}
+          key: pre-commit-3|${{ "{{" }} env.pythonLocation {{ "}}" }}|${{ "{{" }} hashFiles('.pre-commit-config.yaml') {{ "}}" }}
 
       - name: Run pre-commit
         run: devbox run -- make pre-commit
@@ -153,7 +153,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install devbox
+      - name: Install devboxf
         uses: jetpack-io/devbox-install-action@v0.5.0
         with:
           enable-cache: true
@@ -165,7 +165,7 @@ jobs:
       - name: Run chart-testing (list-changed)
         id: list-changed
         run: |
-          changed=$(devbox run -- ct list-changed --target-branch ${{ github.event.repository.default_branch }})
+          changed=$(devbox run -- ct list-changed --target-branch ${{ "{{" }} github.event.repository.default_branch {{ "}}" }})
           if [[ -n "$changed" ]]; then
             echo "changed=true" >> "$GITHUB_OUTPUT"
           fi
