--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,7 +1,7 @@
 # Copyright 2023 Jimmi Dyson.
 # SPDX-License-Identifier: Apache-2.0
 
-project_name: dummy-controller
+project_name: {{project-name}}
 
 changelog:
   use: github
@@ -21,10 +21,10 @@ changelog:
 release:
   footer: |
     ### Summary
-    **Full Changelog**: https://github.com/jimmidyson/{{.ProjectName}}/compare/{{ .PreviousTag }}...{{ .Tag }}
+    **Full Changelog**: https://{{ "{{" }}gomodule{{ "}}" }}/compare/{{ "{{" }} .PreviousTag {{ "}}" }}...{{ "{{" }} .Tag {{ "}}" }}
 
 builds:
-  - id: dummy-controller
+  - id: {{project-name}}
     dir: ./cmd/
     env:
       - CGO_ENABLED=0
@@ -38,61 +38,61 @@ builds:
     goarch:
       - amd64
       - arm64
-    mod_timestamp: '{{ .CommitTimestamp }}'
+    mod_timestamp: '{{ "{{" }} .CommitTimestamp {{ "}}" }}'
     hooks:
       post:
-        - cmd: make SKIP_UPX={{ if index .Env "SKIP_UPX" }}{{ .Env.SKIP_UPX }}{{ else }}{{ .IsSnapshot }}{{ end }} GOOS={{ .Os }} GOARCH={{ .Arch }} UPX_TARGET={{ .Path }} upx
+        - cmd: make SKIP_UPX={{ "{{" }} if index .Env "SKIP_UPX" {{ "}}" }}{{ "{{" }} .Env.SKIP_UPX {{ "}}" }}{{ "{{" }} else {{ "}}" }}{{ "{{" }} .IsSnapshot {{ "}}" }}{{ "{{" }} end {{ "}}" }} GOOS={{ "{{" }} .Os {{ "}}" }} GOARCH={{ "{{" }} .Arch {{ "}}" }} UPX_TARGET={{ "{{" }} .Path {{ "}}" }} upx
 archives:
-  - name_template: '{{ .ProjectName }}_v{{trimprefix .Version "v"}}_{{ .Os }}_{{ .Arch }}'
+  - name_template: '{{ "{{" }} .ProjectName {{ "}}" }}_v{{ "{{" }}trimprefix .Version "v"{{ "}}" }}_{{ "{{" }} .Os {{ "}}" }}_{{ "{{" }} .Arch {{ "}}" }}'
     rlcp: true
     builds:
-      - dummy-controller
+      - {{project-name}}
 dockers:
   - image_templates:
       # Specify the image tag including `-amd64` suffix if the build is not a snapshot build or is not being built on
       # arm64 machine. This allows for using the snapshot image build without the architecture specific suffix
-      # consistently on local machines, i.e. can always use `ghcr.io/jimmidyson/dummy-controller:v<VERSION>` on the machine the snapshot
+      # consistently on local machines, i.e. can always use `ghcr.io/jimmidyson/{{project-name}}:v<VERSION>` on the machine the snapshot
       # is built on.
       #
       # For a release build the `-amd64` suffix will always be included and the `docker_manifests` specification below
       # will create the final multiplatform manifest to be pushed to the registry.
-      - ghcr.io/jimmidyson/{{.ProjectName}}:v{{trimprefix .Version "v"}}{{ if or (not .IsSnapshot) (not (eq .Runtime.Goarch "amd64")) }}-amd64{{ end }}
+      - ghcr.io/jimmidyson/{{ "{{" }}.ProjectName{{ "}}" }}:v{{ "{{" }}trimprefix .Version "v"{{ "}}" }}{{ "{{" }} if or (not .IsSnapshot) (not (eq .Runtime.Goarch "amd64")) {{ "}}" }}-amd64{{ "{{" }} end {{ "}}" }}
     use: buildx
     dockerfile: Dockerfile
     build_flag_templates:
       - "--platform=linux/amd64"
       - "--pull"
-      - "--label=org.opencontainers.image.created={{.Date}}"
-      - "--label=org.opencontainers.image.title={{.ProjectName}}"
-      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-      - "--label=org.opencontainers.image.version={{.Version}}"
-      - "--label=org.opencontainers.image.source={{.GitURL}}"
+      - "--label=org.opencontainers.image.created={{ "{{" }}.Date{{ "}}" }}"
+      - "--label=org.opencontainers.image.title={{ "{{" }}.ProjectName{{ "}}" }}"
+      - "--label=org.opencontainers.image.revision={{ "{{" }}.FullCommit{{ "}}" }}"
+      - "--label=org.opencontainers.image.version={{ "{{" }}.Version{{ "}}" }}"
+      - "--label=org.opencontainers.image.source={{ "{{" }}.GitURL{{ "}}" }}"
   - image_templates:
       # Specify the image tag including `-amd64v8` suffix if the build is not a snapshot build or is not being built on
       # arm64 machine. This allows for using the snapshot image build without the architecture specific suffix
-      # consistently on local machines, i.e. can always use `ghcr.io/jimmidyson/dummy-controller:v<VERSION>` on the machine the snapshot
+      # consistently on local machines, i.e. can always use `ghcr.io/jimmidyson/{{project-name}}:v<VERSION>` on the machine the snapshot
       # is built on.
       #
       # For a release build the `-amd64v8` suffix will always be included and the `docker_manifests` specification below
       # will create the final multiplatform manifest to be pushed to the registry.
-    - ghcr.io/jimmidyson/{{.ProjectName}}:v{{trimprefix .Version "v"}}{{ if or (not .IsSnapshot) (not (eq .Runtime.Goarch "arm64")) }}-arm64v8{{ end }}
+    - ghcr.io/jimmidyson/{{ "{{" }}.ProjectName{{ "}}" }}:v{{ "{{" }}trimprefix .Version "v"{{ "}}" }}{{ "{{" }} if or (not .IsSnapshot) (not (eq .Runtime.Goarch "arm64")) {{ "}}" }}-arm64v8{{ "{{" }} end {{ "}}" }}
     use: buildx
     goarch: arm64
     dockerfile: Dockerfile
     build_flag_templates:
       - "--platform=linux/arm64"
       - "--pull"
-      - "--label=org.opencontainers.image.created={{.Date}}"
-      - "--label=org.opencontainers.image.title={{.ProjectName}}"
-      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-      - "--label=org.opencontainers.image.version={{.Version}}"
-      - "--label=org.opencontainers.image.source={{.GitURL}}"
+      - "--label=org.opencontainers.image.created={{ "{{" }}.Date{{ "}}" }}"
+      - "--label=org.opencontainers.image.title={{ "{{" }}.ProjectName{{ "}}" }}"
+      - "--label=org.opencontainers.image.revision={{ "{{" }}.FullCommit{{ "}}" }}"
+      - "--label=org.opencontainers.image.version={{ "{{" }}.Version{{ "}}" }}"
+      - "--label=org.opencontainers.image.source={{ "{{" }}.GitURL{{ "}}" }}"
 docker_manifests:
-  - name_template: jimmidyson/{{.ProjectName}}:v{{trimprefix .Version "v"}}
+  - name_template: jimmidyson/{{ "{{" }}.ProjectName{{ "}}" }}:v{{ "{{" }}trimprefix .Version "v"{{ "}}" }}
     image_templates:
-    - ghcr.io/jimmidyson/{{.ProjectName}}:v{{trimprefix .Version "v"}}-amd64
-    - ghcr.io/jimmidyson/{{.ProjectName}}:v{{trimprefix .Version "v"}}-arm64v8
+    - ghcr.io/jimmidyson/{{ "{{" }}.ProjectName{{ "}}" }}:v{{ "{{" }}trimprefix .Version "v"{{ "}}" }}-amd64
+    - ghcr.io/jimmidyson/{{ "{{" }}.ProjectName{{ "}}" }}:v{{ "{{" }}trimprefix .Version "v"{{ "}}" }}-arm64v8
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ incminor .Tag }}-dev"
+  name_template: "{{ "{{" }} incminor .Tag {{ "}}" }}-dev"
