--- a/charts/{{ project-name }}/templates/role.yaml
+++ b/charts/{{ project-name }}/templates/role.yaml
@@ -4,7 +4,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ template "chart.name" . }}-manager-role
+  name: {{ "{{" }} template "chart.name" . {{ "}}" }}-manager-role
 rules:
 - apiGroups:
   - dummy.example.com
